# TOP-24

./: .clang-format  .gitignore  LICENSE  README.md
LAB_01-BASICS/exercises/mol-dyn/: dfill.c  forces.c  main.c  make.def
LAB_01-BASICS/exercises/vector/: CMakeLists.txt  Makefile  meson.build
LAB_01-BASICS/exercises/vector/include/: compute.h  timer.h  vector.h
LAB_01-BASICS/exercises/vector/src/: compute.c  vector.c
LAB_01-BASICS/src/: types.h
LAB_01-BASICS/src/bugs/: main.c
LAB_01-BASICS/src/mol-dyn/: Makefile  domove.c  dscal.c  fcc.c  mkekin.c  mxwell.c  prnout.c  random.c  random.h  velavg.c
LAB_01-BASICS/src/saxpy/: main.c
LAB_01-BASICS/src/vector/: compute.h  main.c  timer.h  vector.h
LAB_02-MEMORY/src/sobel/: .gitignore  Makefile  README.md  cvt_vid.sh
LAB_02-MEMORY/src/sobel/src/: baseline.c  baseline.h  common.c  common.h  sobel.c
LAB_02-MEMORY/src/stencil/: stencil.c
LAB_02-MEMORY_LAYOUT/exercises/cross-stencil/: .gitmodules  CMakeLists.txt  README.md
LAB_02-MEMORY_LAYOUT/exercises/cross-stencil/include/: blocked.hpp  mdspan_type_util.hpp  non_blocked.hpp
LAB_02-MEMORY_LAYOUT/exercises/cross-stencil/src/: main.cpp  non_blocked.cpp
LAB_02_03-SHARED_MEMORY/exercises/cross-stencil/include/: check_result.hpp
LAB_02_03-SHARED_MEMORY/exercises/cross-stencil/src/: blocked.cpp
LAB_02_03-SHARED_MEMORY/exercises/integer-sum-redux/: CMakeLists.txt
LAB_02_03-SHARED_MEMORY/exercises/integer-sum-redux/include/: cycle.h  sequential.hpp
LAB_02_03-SHARED_MEMORY/exercises/integer-sum-redux/src/: main.cpp  sequential.cpp
LAB_02_03-SHARED_MEMORY/exercises/mesh/: CMakeLists.txt
LAB_02_03-SHARED_MEMORY/exercises/mesh/scripts/: bench.py
LAB_02_03-SHARED_MEMORY/exercises/mesh/solution/: main.c
LAB_02_03-SHARED_MEMORY/exercises/mesh/src/: main.c
LAB_02_03-SHARED_MEMORY/exercises/omp-tasks/: fibonacci.c  nqueens_seq.c
